# wbm_code_compare

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_code_compare_git_branch_vs_branch.sh  run_compare_git_branch_vs_local_folder.sh
app/reports/: sample_report_branch_vs_branch.html  sample_report_branch_vs_local.html
src/: main.py
src/analysis/: comparer.py
src/models/: base.py  git_repo.py
src/models/assets/: webmethods.py
src/utils/: logger.py
